--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Time and speed are so important when it comes to MS. Head to www.MSMotion.com.au for more information and access to resources to share with your own networks #MSMotionAU">
-    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://website.com/image250X250.png"/>
+
     <meta name="twitter:title" content="Time and speed are so important when it comes to MS. Head to www.MSMotion.com.au for more information and access to resources to share with your own networks #MSMotionAU">
-    <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="https://i.imgur.com/R1EkCOw.png">
     <title>Document</title>
 </head>
