--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Time and speed are so important when it comes to MS.">
     <meta property="og:description" content="Head to www.MSMotion.com.au for more information and access to resources to share with your own networks #MSMotionAU">
-    <meta property="og:image" content="./news1.png">
-    <!-- <meta property="og:url" content="http://euro-travel-example.com/index.htm"> -->
+    <meta property="og:url" content="https://ssm1le.github.io/" />
+    <meta property="og:image" content="https://ssm1le.github.io/news1.png">
     <meta name="twitter:title" content="Time and speed are so important when it comes to MS. ">
     <meta name="twitter:description" content=" Head to www.MSMotion.com.au for more information and access to resources to share with your own networks #MSMotionAU">
-    <meta name="twitter:image" content="./news1.png">
+    <meta name="twitter:image" content="https://ssm1le.github.io/news1.png">
     <meta name="twitter:card" content="summary_large_image">
     <title>Document</title>
 </head>
