--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         content=" Head to www.MSMotion.com.au for more information and access to resources to share with your own networks #MSMotionAU">
     <meta name="twitter:image" content="./news1.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta http-equiv="refresh" content="1;URL=https://cp-author.biogen-support.com/content/intl/apac/australia/ms/patients/motion-initiative/en_AU/home/join-us.html" />
+    <script>
+        document.addEventListener("click", function () {
+            setTimeout(function () {
+                document.location = "/content/intl/apac/australia/ms/patients/motion-initiative/en_AU/home/join-us.html";
+            }, 3000);
+        })
+    </script>
     <title>Document</title>
 </head>
 <!-- <head>
