--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <meta name="twitter:image" content="./news1.png">
     <meta name="twitter:card" content="summary_large_image">
     <script>
-        document.addEventListener("click", function () {
+        document.addEventListener("DOMContentLoaded", function () {
             setTimeout(function () {
-                document.location = "/content/intl/apac/australia/ms/patients/motion-initiative/en_AU/home/join-us.html";
-            }, 3000);
+                document.location =
+                    "/content/intl/apac/australia/ms/patients/motion-initiative/en_AU/home/join-us.html";
+            }, 1000);
         })
     </script>
     <title>Document</title>
