--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <meta name="twitter:title" content="Time and speed are so important when it comes to MS. ">
     <meta name="twitter:description"
         content=" Head to www.MSMotion.com.au for more information and access to resources to share with your own networks #MSMotionAU">
-    <meta name="twitter:image" content="./news1.png">
+    <meta name="twitter:image" content="https://ssm1le.github.io/share-poster-4.png">
     <meta name="twitter:card" content="summary_large_image">
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            setTimeout(function () {
-                document.location =
-                    "/content/intl/apac/australia/ms/patients/motion-initiative/en_AU/home/join-us.html";
-            }, 1000);
-        })
+        // document.addEventListener("DOMContentLoaded", function () {
+        //     setTimeout(function () {
+        //         document.location =
+        //             "/content/intl/apac/australia/ms/patients/motion-initiative/en_AU/home/join-us.html";
+        //     }, 1000);
+        // })
     </script>
     <title>Document</title>
 </head>
