--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://ssm1le.github.io/share-poster-4.png">
+    <meta property="og:title" content="Time and speed are so important when it comes to MS.">
+    <meta property="og:image" content="ssm1le.github.io/share-poster-4.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://ssm1le.github.io/share-poster-4.png">
+    <meta name="twitter:title" content="Time and speed are so important when it comes to MS.">
+    <meta name="twitter:image" content="ssm1le.github.io/share-poster-4.png">
     <script>
         // document.addEventListener("DOMContentLoaded", function () {
         //     setTimeout(function () {
@@ -18,10 +20,8 @@
     <title>Document</title>
 </head>
 
-<body>
-
-    sadasd
-
+<body>asd
+sss
 </body>
 
 </html>
