--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Time and speed are so important when it comes to MS.">
-    <meta property="og:image" content="ssm1le.github.io/share-poster-4.png">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Time and speed are so important when it comes to MS.">
     <meta name="twitter:title" content="Time and speed are so important when it comes to MS.">
-    <meta name="twitter:image" content="ssm1le.github.io/share-poster-4.png">
-    <script>
-        // document.addEventListener("DOMContentLoaded", function () {
-        //     setTimeout(function () {
-        //         document.location =
-        //             "/content/intl/apac/australia/ms/patients/motion-initiative/en_AU/home/join-us.html";
-        //     }, 1000);
-        // })
-    </script>
+    <meta property="og:image" content="https://ssm1le.github.io/share-poster-4.png?2">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:width" content="1200">
+    <meta name="twitter:image:src" content="https://ssm1le.github.io/share-poster-4.png?2">
+    <meta name="twitter:image:height" content="630">
+    <meta name="twitter:image:width" content="1200">
     <title>Document</title>
 </head>
-
-<body>asd
-sss
+<body>asds
+    ssss
 </body>
-
 </html>
