--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Time and speed are so important when it comes to MS.">
     <meta name="twitter:title" content="Time and speed are so important when it comes to MS.">
-    <meta property="og:image" content="https://ssm1le.github.io/share-poster-4.png?2">
+    <meta property="og:image" content="/share-poster-4.png?2">
     <meta property="og:image:height" content="630">
     <meta property="og:image:width" content="1200">
-    <meta name="twitter:image:src" content="https://ssm1le.github.io/share-poster-4.png?2">
+    <meta name="twitter:image:src" content="/share-poster-4.png?2">
     <meta name="twitter:image:height" content="630">
     <meta name="twitter:image:width" content="1200">
     <title>Document</title>
 </head>
-<body>asds
-    ssss
+<body>asds'l;
+    ssss;
 </body>
 </html>
